# inverted-pendulum-mpc-control

./: .gitattributes  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
control/: mpc_control.py
data/: simulation_data.csv
docs/: inverted_pendulum_lagrangian.md
dynamics/: inverted_pendulum_dynamics.py
simulation/: simulation.py
tests/: test_dynamics.py  test_mpc_control.py  test_simulation.py
